--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,42 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+
+  /* Resets */
+.panel-primary {
+  border-color: #29ABE2;
 }
+.panel-primary .panel-heading {
+  border-color: #29ABE2;
+  background-color: #29ABE2;
+}
+a,
+a:hover,
+.text-primary {
+  color: #29ABE2;
+  text-decoration: none;
+}
+.btn-primary {
+  color: #fff;
+  background-color: #29ABE2;
+  border-color: #29ABE2;
+}
+.progress-bar {
+  background-color: #29ABE2;
+}
+.list-group-item:hover {
+  background: #f4f4f4;
+}
+.nav-pills>li.active>a, .nav-pills>li.active>a:focus, .nav-pills>li.active>a:hover {
+  background-color: #29ABE2;
+}
+.loading {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 28px;
+  height: 28px;
+  -webkit-animation:spin 1500ms linear infinite;
+  -moz-animation:spin 1500ms linear infinite;
+  animation:spin 1500ms linear infinite;
+}
+@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
+@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
+@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
